--- a/截图/canvas截图.html
+++ b/截图/canvas截图.html
@@ -4,7 +4,7 @@
         <meta name="layout" content="main">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />  
         <script type="text/javascript" src="jquery-1.8.3.min.js"></script>
-        <script type="text/javascript" src="http://html2canvas.hertzen.com/build/html2canvas.js"></script>
+        <script type="text/javascript" src="./html2canvas.js"></script>
          
         <script  type="text/javascript" >
         $(document).ready( function(){
@@ -23,7 +23,8 @@
                             console.log(dataUrl)
                             var newImg = document.createElement("img");
                             newImg.src =  dataUrl;
-                            document.body.appendChild(newImg);
+//                          document.body.appendChild(newImg);
+$('html').html(newImg)
                         }
                     });
                 }); 
