--- a/垂直居中.html
+++ b/垂直居中.html
@@ -17,14 +17,14 @@
     width: 600px; height: 400px;
     position: absolute; left: 0; top: 0; right: 0; bottom: 0;
     margin: auto;    /* 有了这个就自动居中了 */
-   background: #eee;
+    background: #eee;
 }
 </style>
 <body> 
 	
-<div class="img_wrap">
-	
-	<div class="element"></div>
+<div style="height:200px">
+<img src="2.png" style="width:50px;vertical-align:middle;">
+<span style="vertical-align:middle">hahahahhah</span>
 </div>
 </body>
 </html>
