--- a/webpackandreact/src/index.html
+++ b/webpackandreact/src/index.html
@@ -6,5 +6,7 @@
 	</head>
 	<body>
 		<div id="root"></div>
+		<div class="back"></div>
+		<div><img src="" id="logo" alt=""></div>
 	</body>
 </html>
