动画过渡等

--- a/test.html
+++ b/test.html
@@ -7,12 +7,21 @@
 	</head>
 
 	<body>
-		<form id="paymentForm" method="get" action="https://wappaygw.alipay.com/service/rest.htm?_input_charset=utf-8">
-			<input type="hidden" name="v" value="2.0"><input type="hidden" name="sec_id" value="MD5">
-			<input type="hidden" name="_input_charset" value="utf-8"><input type="hidden" name="req_data" value="&lt;auth_and_execute_req&gt;&lt;request_token&gt;201707246f907be1ea254c778691e96b64750855&lt;/request_token&gt;&lt;/auth_and_execute_req&gt;"><input type="hidden" name="service" value="alipay.wap.auth.authAndExecute"><input type="hidden" name="partner" value="2088211818012266"><input type="hidden" name="format" value="xml"><input type="hidden" name="sign" value="d1685cd39a72c610f551db2af084f395"></form>
-		<script>
-			document.getElementById('paymentForm').submit();
-		</script>
+		
 	</body>
-
+<script>
+	var foo={
+		set age(value){
+			console.log("hahah")
+		},
+		get age(){
+			return 33;
+		}
+	}
+	Object.defineProperty(foo,"height",{
+		get:function(){
+			return 55
+		}
+	})
+</script>
 </html>
