--- a/es6/index.html
+++ b/es6/index.html
@@ -8,15 +8,18 @@
 	<title>Document</title>
 </head>
 <script src='traceur.js'></script>
-<script src='bootstrap.js'></script>
+<!--<script src='bootstrap.js'></script>-->
 <body>
-dd
+
 </body>
 <script type="module">
-    {
-       var tmp="\u0061";
-        	 document.write(tmp)
-    }
-
+function foo(x,cb){
+setTimeout(function(err,data){
+	cb(x)
+},1000)
+}
+foo(5,function(x){
+	console.log(x)
+})
 </script>
 </html>
