--- a/草稿.html
+++ b/草稿.html
@@ -1,43 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="https://code.jquery.com/jquery-2.2.4.js" ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.js"></script>
-<style>
-div.up{
-	background: #D0E9C6;
-	/*float: left;*/
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	/*flex-direction: column-reverse;*/
-	
+
+	<head>
+		<meta charset="UTF-8">
+		<title>Title</title>
+		<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.js"></script>
+		<style>
+div{
+	direction: rtl;
 }
-div.down{
-	width: 1080px;
-    height: 500px;
-	margin: 40px;
-	background: #D58512 url(1.png) repeat;
-	padding: 40px;
-	background-position: 10px 0;
-}
-</style>
+		</style>
 
-</head>
-<body>
+	</head>
 
-<div class="up">
-
-	<div class="down" style="order: 2;">1</div>
-
-		
-	
+	<body>
+<div style="width: 500px;height: 500px;background: #999;" class="parent">
+	1 2 a b
 </div>
 
-</body>
-<script>
+	</body>
+	<script>
+	</script>
 
-</script>
 </html>
