--- a/草稿.html
+++ b/草稿.html
@@ -6,6 +6,10 @@
 		<title>Title</title>
 		<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.js"></script>
+		<link rel="shortcut icon" href="" type="image/x-icon" />
+		<style type="text/css">
+			
+		</style>
 		<style>
 div{
 	direction: rtl;
@@ -15,7 +19,7 @@ div{
 	</head>
 
 	<body>
-<div style="width: 500px;height: 500px;background: #999;" class="parent">
+<div style="width: 500px;height: 500px;background: #999;" class="parent" data-hh="555">
 	1 2 a b
 </div>
 
