--- a/跨域7/index1.html
+++ b/跨域7/index1.html
@@ -6,11 +6,6 @@
 	</head>
 	<body>
 	</body>
-	<script>
-		window.addEventListener("message",myclick,false)
-		function myclick(e){
-			alert(e.data)
-		}
+	<script type="text/javascript">
 	</script>
 </html>
- 
