--- a/草稿.html
+++ b/草稿.html
@@ -19,12 +19,24 @@ div{
 	</head>
 
 	<body>
-<div style="width: 500px;height: 500px;background: #999;" class="parent" data-hh="555">
-	1 2 a b
-</div>
-
+<ul id="ul">
+	<li>1222222222222</li>
+	<li>2222222222222</li>
+	
+	<li>3222222222222</li>
+	<li>4222222222222</li>
+	<li>5222222222222</li>
+	<li>6222222222222</li>
+	<li>7222222222222</li>
+	<li>2222222222222</li>
+	
+</ul>
 	</body>
 	<script>
+	document.body.onclick=function(e){
+		console.log(e.screenX)
+	}
+		
 	</script>
 
 </html>
