--- a/跨域.html
+++ b/跨域.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<script src="jquery-1.8.3.min.js"></script>
-	</head>
-	<body>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>jQuery实现JSONP</title>
+</head>
+<body>
+    <div id="mydiv">
+        <button id="btn">点击</button>
+    </div>
+</body>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+<script type="text/javascript">
+    $(function(){
+        $("#btn").click(function(){
+
+           $.getJSON("https://api.douban.com/v2/book/search?q=javascript&count=1&callback=?", function(data){
+                console.log(data);
+   });
+        });
+    });
+</script>
 </html>
