--- a/草稿.html
+++ b/草稿.html
@@ -19,18 +19,16 @@ div{
 	</head>
 
 	<body>
-<ul id="ul">
-	<li>1222222222222</li>
-	<li>2222222222222</li>
-	
-	<li>3222222222222</li>
-	<li>4222222222222</li>
-	<li>5222222222222</li>
-	<li>6222222222222</li>
-	<li>7222222222222</li>
-	<li>2222222222222</li>
-	   
-</ul>
+ <li class='row'>
+	                          <div class='col-xs-6' style="font-size:15px;color:#666;">保障内容</div>
+	                          <div class='col-xs-6'></div>
+	                          </li>
+		                      <li class='row' v-for="item in result.vehicleCoverageList" v-show="item.kindName.indexOf('附加')==-1&&item.productCode=='AYB00121'">
+		                      <div class='col-xs-8 widthLeft'>{{item.kindName}}</div>
+		                      <div class='col-xs-4 widthRight' v-if="!result.isPresentation">￥{{item.modeCode}}</div>
+		                      <div class='col-xs-4 widthRight' v-else>{{item.modeCode}}</div>
+		                      </li>
+		                      <li class='row' v-for="item in result.vehicleCoverageList"  v-show="item.productCode!='AYB00121'><div class='col-xs-8 widthLeft'>{{item.kindName}}</div><div class='col-xs-4 widthRight' v-if="!result.isPresentation">￥{{item.modeCode}}</div><div class='col-xs-4 widthRight' v-else>{{item.modeCode}}</div></li>
 	</body>
 	<script>
 	document.body.onclick=function(e){
