--- a/vue/demo.html
+++ b/vue/demo.html
@@ -5,38 +5,35 @@
     <title></title>
 </head>
 <body>
-<div id="counter-event-example">
-  <p>{{ total }}</p>
-  <button-counter v-on:increment="incrementTotal"></button-counter>
-  <button-counter v-on:increment="incrementTotal"></button-counter>
+
+<div id="app">
+	44444444
+	{{aa}}
+	<bb></bb>
 </div>
+</body>
 <script src="vue.js"></script>
+<script type="x-template" id="tem">
+	<div>77777777{{hh}}</div>
+</script>
+<template id="oo">
+	<div>76666666{{hh}}</div>
+</template>
 <script>
-  Vue.component('button-counter', {
-  template: '<button v-on:click="incrementCounter">{{ counter }}</button>',
-  data: function () {
-    return {
-      counter: 0
-    }
-  },
-  methods: {
-    incrementCounter: function () {
-      this.counter += 1
-      this.$emit('increment')
-    }
-  },
-})
-var vm=new Vue({
-  el: '#counter-event-example',
-  data: {
-    total: 0
-  },
-  methods: {
-    incrementTotal: function () {
-      this.total += 1
-    }
-  }
+	
+	Vue.component("bb",{
+		template:"#oo",
+		data:function(){
+			return{
+				hh:5
+			}
+		}
+	})
+new Vue({
+	el:"#app",
+	data:{
+		aa:1
+	}
 })
 </script>
-</body>
 </html>
