--- a/草稿.html
+++ b/草稿.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Title</title>
-		<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.js"></script>
+		<!--<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.js"></script>-->
 		<link rel="shortcut icon" href="" type="image/x-icon" />
 		<style type="text/css">
 			
@@ -19,22 +19,44 @@ div{
 	</head>
 
 	<body>
- <li class='row'>
-	                          <div class='col-xs-6' style="font-size:15px;color:#666;">保障内容</div>
-	                          <div class='col-xs-6'></div>
-	                          </li>
-		                      <li class='row' v-for="item in result.vehicleCoverageList" v-show="item.kindName.indexOf('附加')==-1&&item.productCode=='AYB00121'">
-		                      <div class='col-xs-8 widthLeft'>{{item.kindName}}</div>
-		                      <div class='col-xs-4 widthRight' v-if="!result.isPresentation">￥{{item.modeCode}}</div>
-		                      <div class='col-xs-4 widthRight' v-else>{{item.modeCode}}</div>
-		                      </li>
-		                      <li class='row' v-for="item in result.vehicleCoverageList"  v-show="item.productCode!='AYB00121'><div class='col-xs-8 widthLeft'>{{item.kindName}}</div><div class='col-xs-4 widthRight' v-if="!result.isPresentation">￥{{item.modeCode}}</div><div class='col-xs-4 widthRight' v-else>{{item.modeCode}}</div></li>
-	</body>
+
 	<script>
-	document.body.onclick=function(e){
-		console.log(e.screenX)
-	}
-		
+function mix(...mixins) {
+  class Mix {}
+
+  for (let mixin of mixins) {
+    copyProperties(Mix.prototype, mixin); // 拷贝实例属性
+    copyProperties(Mix.prototype, Reflect.getPrototypeOf(mixin)); // 拷贝原型属性
+  }
+
+  return Mix;
+}
+
+function copyProperties(target, source) {
+  for (let key of Reflect.ownKeys(source)) {
+    if ( key !== "constructor"
+      && key !== "prototype"
+      && key !== "name"
+    ) {
+      let desc = Object.getOwnPropertyDescriptor(source, key);
+      Object.defineProperty(target, key, desc);
+    }
+  }
+}
+
+
+//class DistributedEdit extends mix(Loggable, Serializable) {
+//
+//}
+var obj1={a:3}
+var obj2={b:4}
+class DistributedEdit extends mix(obj1,obj2) {
+ constructor() {
+ 	super()
+  }
+}
+
+console.log(new DistributedEdit().a)
 	</script>
 
 </html>
