--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -8,7 +8,7 @@
   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="
   crossorigin="anonymous">
 </script>
-<script src="../numberlibrary/dist/webpack-numbers.js"></script>
+<!--<script src="../numberlibrary/dist/webpack-numbers.js"></script>-->
 	</head>
 	<body>
 	</body>
