--- a/保险告知.html
+++ b/保险告知.html
@@ -18,5 +18,104 @@
             *本人了解并确认被保险人符合以上所有投保条件。
 		</p>
 	</body>
+	<script type="text/javascript">
+			//定义类
+function Graph(v){
+	this.vertices = v; //顶点
+	this.vertexList = [];
+	this.edges = 0;
+	this.adj = [];
+	for(var i=0;i<this.vertices;++i){
+		this.adj[i] = [];
+	};
+	//方法
+	this.addEdge = addEdge;
+	this.showGraph = showGraph;
+	this.topSortHelper = topSortHelper;
+	this.topSort = topSort;
+}
+ 
+//类对应的方法
+function addEdge(v,w){
+	this.adj[v].push(w);
+	this.adj[w].push(v);
+	this.edges++;
+}
+ 
+ 
+// 用于显示符号名字而非数字的新函数,打印所有顶点及其相邻顶点列表
+function showGraph() {         
+	var visited = [];
+	for ( var i = 0; i < this.vertices; ++i) {
+		var str = '';
+		visited.push(this.vertexList[i+1]);
+		for ( var j = 0; j < this.vertices; ++j ) {
+			if (this.adj[i][j] != undefined) {
+				if (visited.indexOf(this.vertexList[j]) < 0) {
+					str += this.adj[i][j] + ' ';
+				}
+			}
+ 
+		}
+		console.log(i + '->' + str);
+		visited.pop();
+	}
+}
+//显示最短距离路径显示的函数
+function showShortDiatance(paths){
+	var str = '';                 //以下都为输出顺序的显示
+	while (paths.length > 0) {
+		if (paths.length > 1) {
+			str += paths.pop() + '-';
+		}
+		else {
+			str += paths.pop();
+		}
+	}
+	console.log(str);
+}
+//拓扑排序
+function topSort() {
+	var stack = [];
+	var visited = [];
+	for (var i = 0; i < this.vertices; i++) {
+		visited[i] = false;
+	}
+	for (var i = 0; i < this.vertices; i++) {
+		if (visited[i] == false) {
+			this.topSortHelper(i, visited, stack);
+		}
+	}
+	for (var i = 0; i < stack.length; i++) {
+		// if (stack[i] != undefined && stack[i] !== false) {     //stack[i] = 0，但是0 != false 是true，所有应该用严等于
+			console.log(this.vertexList[stack[i]]);
+		}
+	}
+function topSortHelper(v, visited, stack) {
+	visited[v] = true;
+	for(var w in this.adj[v]) {
+		if (!visited[w]) {
+			this.topSortHelper(visited[w], visited, stack);
+		}
+	}
+	stack.push(v);
+}
+ 
+//测试拓扑结构
+g = new Graph(6);
+g.addEdge(1, 2);
+g.addEdge(2, 5);
+g.addEdge(1, 3);
+g.addEdge(1, 4);
+g.addEdge(0, 1);
+g.vertexList = ["CS1", "CS2", "Data Structures",
+"Assembly Language", "Operating Systems",
+"Algorithms"];
+g.showGraph();
+g.topSort();
+ 
+
+
+	</script>
 
 </html>
