--- a/草稿.html
+++ b/草稿.html
@@ -30,17 +30,8 @@
 				}
 				this.addEdge = addEdge
 				this.showGraph = showGraph
-				//深度优先搜索
-				this.dfs = dfs
-				this.marked = []
-				for(var i = 0; i < this.vertices; i++) {
-					this.marked[i] = false
-				}
-				//广度优先搜索
-				this.bfs = bfs
-				this.edgeTo=[]//存放从一个顶点到下一个顶点的所有边，为最短路径添加
-				this.pathTo=pathTo;//用于展示图中链接不同顶点的路径，为最短路径添加
-				this.hasPathTo= hasPathTo//是否访问过，为最短路径添加
+				this.topSortHelper = topSortHelper;
+				this.topSort = topSort;
 			}
 
 			function addEdge(v, w) {
@@ -61,66 +52,50 @@
 					console.log(content)
 				}
 			}
-			//深度优先探索
-			function dfs(v) {
-
-				this.marked[v] = true;
-				if(this.adj[v] != undefined) {
-					console.log("visited" + v)
-				}
-				//如果不这样this会在foreach中成为window
-				var self = this
-				this.adj[v].forEach(function(i) {
-
-					if(i && !self.marked[i]) {
-						self.dfs(i)
-					}
-				})
-			}
-
-			function bfs(s) { //广度优先搜索
-				//如果已经进行深度搜索，就需要初始化一下
+			//拓扑排序
+			function topSort() {
+				var stack = [];
+				var visited = [];
 				for(var i = 0; i < this.vertices; i++) {
-					this.marked[i] = false
+					visited[i] = false;
 				}
-				//初始化结束
-				var queue = [];
-				this.marked[s] = true;
-				queue.push(s); //添加到队尾
-				while(queue.length > 0) {
-					var v = queue.shift(); //从队首取出
-					if(v != undefined) {
-						console.log("访问节点：" + v);
+				for(var i = 0; i < this.vertices; i++) {
+					if(visited[i] == false) {
+						this.topSortHelper(i, visited, stack);
 					}
-					for(var i = 0; i < this.adj[v].length; i++) {
-						var w = this.adj[v]; //找到所选节点的相邻子列表
-						for(var j = 0; j < w.length; j++) {
-							if(!this.marked[w[j]]) {
-								this.edgeTo[w[j]]=v//为最短路径添加
-								this.marked[w[j]] = true; //依次访问其相邻子列表
-								queue.push(w[j]); //将子列表推送入队列
-							}
-						}
+				}
+				console.log(stack)
+				for(var i = 0; i < stack.length; i++) {
+					if(stack[i] != undefined && stack[i] !== false) { //stack[i] = 0，但是0 != false 是true，所有应该用严等于
+						console.log(this.vertexList[stack[i]]);
 					}
 				}
 			}
-			//为最短路径添加
-			function pathTo(v){
-				var source=0;
-				if(!this.hasPathTo(v)){
-					return undefined
+
+			function topSortHelper(v, visited, stack) {
+				visited[v] = true;
+				for(var w in this.adj[v]) {
+					if(!visited[w]) {
+						this.topSortHelper(visited[w], visited, stack);
+					}
 				}
+				stack.push(v);
 			}
-            function hasPathTo(v){
-            	return this.marked[v]
-            }
-			var graph = new Graph(4)
+
+			var graph = new Graph(6)
 			graph.addEdge(0, 1)
 			graph.addEdge(0, 2)
+
 			graph.addEdge(1, 3)
+			graph.addEdge(1, 4)
+			graph.addEdge(2, 5)
+			console.log(graph)
+			graph.vertexList = ["CS1", "CS2", "CS3",
+				"CS4", "CS5",
+				"CS6"
+			];
 			graph.showGraph()
-			graph.dfs(0)
-			graph.bfs(0)
+			graph.topSort();
 		</script>
 
 </html>
