--- a/草稿.html
+++ b/草稿.html
@@ -4,98 +4,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Title</title>
-		<!--<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.js"></script>-->
+		<!--<script src="https://cdn.jsdelivr.net/npm/vue"></script>-->
+		<!--<script src="https://code.jquery.com/jquery-2.2.4.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.js"></script>-->
 		<link rel="shortcut icon" href="" type="image/x-icon" />
-		<style type="text/css">
-
+		<style type="text/css"></style>
+		
+<style>
+			
 		</style>
-		<style>
-			div {
-				direction: rtl;
-			}
-		</style>
-
 	</head>
-
 	<body>
-
-		<script>
-			function Graph(v) {
-				this.vertices = v //顶点数目
-				this.edges = 0 //总边数
-				this.adj = []
-				for(var i = 0; i < this.vertices; i++) {
-					this.adj[i] = []
-				}
-				this.addEdge = addEdge
-				this.showGraph = showGraph
-				this.topSortHelper = topSortHelper;
-				this.topSort = topSort;
-			}
-
-			function addEdge(v, w) {
-				this.adj[v].push(w)
-				this.adj[w].push(v)
-				this.edges++
-			}
-
-			function showGraph() {
-				for(var i = 0; i < this.vertices; i++) {
-					console.log(i + "=>")
-					var content = ""
-					for(var j = 0; j < this.vertices; j++) {
-						if(this.adj[i][j] != undefined) {
-							content += this.adj[i][j] + " "
-						}
-					}
-					console.log(content)
-				}
-			}
-			//拓扑排序
-			function topSort() {
-				var stack = [];
-				var visited = [];
-				for(var i = 0; i < this.vertices; i++) {
-					visited[i] = false;
-				}
-				for(var i = 0; i < this.vertices; i++) {
-					if(visited[i] == false) {
-						this.topSortHelper(i, visited, stack);
-					}
-				}
-				console.log(stack)
-				for(var i = 0; i < stack.length; i++) {
-					if(stack[i] != undefined && stack[i] !== false) { //stack[i] = 0，但是0 != false 是true，所有应该用严等于
-						console.log(this.vertexList[stack[i]]);
-					}
-				}
-			}
-
-			function topSortHelper(v, visited, stack) {
-				visited[v] = true;
-				for(var w in this.adj[v]) {
-					if(!visited[w]) {
-						this.topSortHelper(visited[w], visited, stack);
-					}
-				}
-				stack.push(v);
-			}
-
-			var graph = new Graph(6)
-			graph.addEdge(0, 1)
-			graph.addEdge(0, 2)
-
-			graph.addEdge(1, 3)
-			graph.addEdge(1, 4)
-			graph.addEdge(2, 5)
-			console.log(graph)
-			graph.vertexList = ["CS1", "CS2", "CS3",
-				"CS4", "CS5",
-				"CS6"
-			];
-			graph.showGraph()
-			graph.topSort();
-		</script>
-
+		<span style="background: #D43C33;">
+			<span style="background: #006600;line-height: 50px;">看看我的位置</span>
+			X2222
+</span>
+	</body>
 </html>
