--- a/草稿.html
+++ b/草稿.html
@@ -14,9 +14,37 @@
 		</style>
 	</head>
 	<body>
-		<span style="background: #D43C33;">
-			<span style="background: #006600;line-height: 50px;">看看我的位置</span>
-			X2222
+		
+			
 </span>
 	</body>
+	<script type="text/javascript">
+//	var arr=[]
+//for(var i=0;i<10;i++){
+//	arr.push(Math.floor(Math.random()*100))
+//}
+//for(var i=1;i<arr.length;i++){
+//	var j=i-1;
+//	var temp=arr[i]
+//	while(j>=0&&arr[j]>temp){
+//		arr[j+1]=arr[j]
+//		j--
+//	}
+//	arr[j+1]=temp
+//}
+//console.log(arr)
+class Widget {
+  foo (baz) {
+    bar.call(this, baz);
+  }
+  ba(){console.log(this.foo("pp"),this.snaf)}
+  // ...
+}
+
+function bar(baz) {
+  return this.snaf = baz;
+}
+
+new Widget().ba()
+	</script>
 </html>
