--- a/草稿.html
+++ b/草稿.html
@@ -19,32 +19,20 @@
 </span>
 	</body>
 	<script type="text/javascript">
-//	var arr=[]
-//for(var i=0;i<10;i++){
-//	arr.push(Math.floor(Math.random()*100))
-//}
-//for(var i=1;i<arr.length;i++){
-//	var j=i-1;
-//	var temp=arr[i]
-//	while(j>=0&&arr[j]>temp){
-//		arr[j+1]=arr[j]
-//		j--
-//	}
-//	arr[j+1]=temp
-//}
-//console.log(arr)
-class Widget {
-  foo (baz) {
-    bar.call(this, baz);
-  }
-  ba(){console.log(this.foo("pp"),this.snaf)}
-  // ...
+	var arr=[]
+for(var i=0;i<10;i++){
+	arr.push(Math.floor(Math.random()*100))
 }
-
-function bar(baz) {
-  return this.snaf = baz;
+for(var i=1;i<arr.length;i++){
+	var temp=arr[i]
+	var j=i-1
+	while(j>=0&&arr[j]>temp){
+		arr[j+1]=arr[j]
+		j--
+	}
+	arr[j+1]=temp
 }
+console.log(arr)
 
-new Widget().ba()
 	</script>
 </html>
