切换分支后的提交

--- a/async.html
+++ b/async.html
@@ -5,7 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-		55555555622test
+		55555555622testtest
 		<script>
 			function timeout(ms) {
   return new Promise((resolve) => {
